Хоть какой-то визуал

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
+
 <body>
-    <dev>Ну тут типа шото будет, типа гифка, да?</dev>
+<div>
+    <div class="header">
+        <b class="upperString">
+            Rich GIFs API
+        </b>
+    </div>
+    <div id="info" class="bordered"></div>
+    <iframe id="resultGif" src="https://giphy.com/embed/Qa5dsjQjlCqOY" width="720" height="420" frameBorder="0"></iframe>
+</div>
 </body>
+
+<script src="parsing.js" charset="utf-8"></script>
+
 </html>
