Доделки по JSу, можно смотреть для разных валют

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,8 @@
         </b>
     </div>
     <div id="info" class="bordered"></div>
-    <iframe id="resultGif" src="https://giphy.com/embed/Qa5dsjQjlCqOY" width="720" height="420" frameBorder="0"></iframe>
+    <iframe id="resultGif" src="" width="720" height="420" frameBorder="0"></iframe>
+    <div>Сравнить курсы для: <select id="select"></select></div>
 </div>
 </body>
 
