Начало тестов и семплы

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+    <title>API</title>
 </head>
 
 <body>
@@ -15,8 +15,12 @@
         </b>
     </div>
     <div id="info" class="bordered"></div>
+    <div id="valueT" style="font-size: 60px"></div>
+    <div class="bordered">Вчера курс составлял:</div>
+    <div id="valueY" style="font-size: 60px"></div>
     <iframe id="resultGif" src="" width="720" height="420" frameBorder="0"></iframe>
     <div>Сравнить курсы для: <select id="select"></select></div>
+    <div id="loading"></div>
 </div>
 </body>
 
