Тесты падают из-за Feign

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,6 +21,9 @@
     <iframe id="resultGif" src="" width="720" height="420" frameBorder="0"></iframe>
     <div>Сравнить курсы для: <select id="select"></select></div>
     <div id="loading"></div>
+    <div style="margin: 1%; font-size: 40px">Powered by:</div>
+    <img style="margin-right: 2%" src="https://openexchangerates.org/zfoxr/images/logos/logo-open-exchange-rates-white.png" height="30" width="250" alt="Meh">
+    <img style="margin-left: 2%" src="GIPHY.png" height="30" width="140" alt="Meh">
 </div>
 </body>
 
