--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="info" class="bordered"></div>
     <div id="valueT" style="font-size: 60px"></div>
-    <div class="bordered">Вчера курс составлял:</div>
+    <div id="secondHeader" class="bordered"></div>
     <div id="valueY" style="font-size: 60px"></div>
     <iframe id="resultGif" src="" width="720" height="420" frameBorder="0"></iframe>
     <div>Сравнить курсы для: <select id="select"></select></div>
